; ModuleID = '/home/carl/AnghaBench/TDengine/src/os/windows/src/extr_twindows.c_interlocked_or_fetch_8.c'
source_filename = "/home/carl/AnghaBench/TDengine/src/os/windows/src/extr_twindows.c_interlocked_or_fetch_8.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local signext i8 @interlocked_or_fetch_8(i8* %0, i8 signext %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i8, align 1
  store i8* %0, i8** %3, align 8
  store i8 %1, i8* %4, align 1
  %5 = load i8*, i8** %3, align 8
  %6 = load i8, i8* %4, align 1
  %7 = call signext i8 @_InterlockedOr8(i8* %5, i8 signext %6)
  %8 = sext i8 %7 to i32
  %9 = load i8, i8* %4, align 1
  %10 = sext i8 %9 to i32
  %11 = or i32 %8, %10
  %12 = trunc i32 %11 to i8
  ret i8 %12
}

declare dso_local signext i8 @_InterlockedOr8(i8*, i8 signext) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
